--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,4 +24,4 @@ jobs:
           - name: Cleanup
             if: always()
             run: |
-              ssh-add -D || echo "No ssh-agent running. nothing to clean."
+              ssh-add -D
